Fix header spacing
Also fix header nav-links alignment on smaller screens

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -49,17 +49,15 @@ header.header {
         padding: 0;
         display: flex;
         flex-wrap: wrap;
+        justify-content: flex-end;
+        gap: .5rem;
     }
 
     .nav__item {
         display: inline;
-
-        &:not(:last-of-type) {
-            margin-right: 15px;
-        }
     }
     .nav__item--link {
-        padding: 10px;
+        padding: .5rem;
         border-radius: 5px;
         border-bottom: 0 !important;
 
